--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "xjs-framework": "^2.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
